--- a/Capstone Project.Rmd
+++ b/Capstone Project.Rmd
@@ -5,24 +5,26 @@ date: "12/13/2020"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+Question 2: Which continuous variables are most correlated with each other? Does this change after sub-setting into disease states?
+
+```{r, echo = FALSE, warning = FALSE, message=FALSE}
+library(tidyverse)
+#I found the library below containing convenient functions to both calculate and plot correlations
+library(corrplot)
+library(knitr)
 ```
 
-Question 2: Which continuous variables are most correlated with each other? Does this change after subsetting into disease states?
+```{r}
 
-
-```{r cars}
-library(tidyverse)
 
 df <- read.csv(file = 'data/ds_whole.csv')
 df_cont <- df[, c(3,5,6,8,9)]
 
-#I found the library below containing convenient functions to both calculate and plot correlations
-library(corrplot)
 
-df_cont_corr <- cor(df_cont)
-print(df_cont_corr)
+df_cont_corr <- cor(df_cont) %>%
+  as.table()
+
+knitr::kable(df_cont_corr)
 
 ```
 
@@ -40,8 +42,9 @@ The correlations between these continuous variables show that RNFL4.mean and mea
 First I'll do the non-glaucoma observations:
 ```{r}
 df_healthy_cont <- df[which(df$glaucoma == 0), c(3,5,6,8,9)]
-df_healthy_cont_corr <- cor(df_healthy_cont)
-print(df_healthy_cont_corr)
+df_healthy_cont_corr <- cor(df_healthy_cont) %>% as.table()
+
+kable(df_healthy_cont_corr)
 
 
 ```
@@ -53,12 +56,15 @@ corrplot(df_healthy_cont_corr,
          tl.pos = "ld", 
          tl.col = "black")
 ```
+
+
 In the healthy samples, mean deviation and pattern standard deviation are now the strongest correlation, being an anti-correlation with a value of -0.57
 
 ```{r}
 df_disease_cont <- df[which(df$glaucoma == 1), c(3,5,6,8,9)]
-df_disease_cont_corr <- cor(df_disease_cont)
-print(df_disease_cont_corr)
+df_disease_cont_corr <- cor(df_disease_cont) %>% as.table()
+
+kable(df_disease_cont_corr)
 
 ```
 
@@ -70,5 +76,7 @@ corrplot(df_disease_cont_corr,
          tl.pos = "ld", 
          tl.col = "black")
 ```
+
+
 In the disease state, mean_deviation and RNFL mean maintain the highest correlation coefficient, although the strength of the correlation weakens slightly having a value of only 0.56.
 
