--- a/Capstone Project-Question 3.Rmd
+++ b/Capstone Project-Question 3.Rmd
@@ -19,7 +19,7 @@ library(knitr)
 ```{r}
 df <- read.csv(file = 'data/ds_whole.csv')
 #Read in the data
-df_cont <- df[, c(3,5,6,8,9)]
+df_cont <- df[, c(3,4,5,6,8,9)]
 #Subset to the continuous variables
 df_cont_corr <- cor(df_cont)
 #Using the cor() function from corrplot to generate correlation coefficients for each pair of variables
@@ -34,19 +34,19 @@ corrplot(df_cont_corr,
          diag = FALSE, 
          tl.pos = "ld", 
          tl.col = "black",
-         tl.cex = 1.1)
+         tl.cex = 1)
 
 ```
 
 The correlations between these continuous variables show that RNFL4.mean and mean_deviation are the most well correlated, with a Pearson correlation coefficient of ~0.679.
-The visualization above displays the correlation coefficients using both a red-blue color scale and by the size of the square within the box. I trimmed off the mirroring of the values, self-pairings,  andchanged the font color to black for better readability.
+The visualization above displays the correlation coefficients using both a red-blue color scale and by the size of the square within the box. I trimmed off the mirroring of the values, self-pairings,  and changed the font color to black for better readability.
 
 
 I'll now repeat these analyses on the data after subsetting by disease state.
 
 First I'll do the non-glaucoma observations:
 ```{r}
-df_healthy_cont <- df[which(df$glaucoma == 0), c(3,5,6,8,9)]
+df_healthy_cont <- df[which(df$glaucoma == 0), c(3,4,5,6,8,9)]
 #Here I use the which function to take data only from rows where the value for the variable "glaucoma" is 0, indicating healthy samples
 #Afterwards, visualization is the same as above.
 df_healthy_cont_corr <- cor(df_healthy_cont)
@@ -61,14 +61,14 @@ corrplot(df_healthy_cont_corr,
          diag = FALSE, 
          tl.pos = "ld", 
          tl.col = "black",
-         tl.cex = 1.1)
+         tl.cex = 1)
 ```
 
 
-In the healthy samples, mean deviation and pattern standard deviation are now the strongest correlation, being an anti-correlation with a value of -0.57. It is somewhat interesting that the dominant correlation changes
+In the healthy samples, mean deviation and pattern standard deviation are now the strongest correlation, being an anti-correlation with a value of -0.57. It is somewhat interesting that the dominant correlation changes here, although the biological implications of this are lost on me.
 
 ```{r}
-df_disease_cont <- df[which(df$glaucoma == 1), c(3,5,6,8,9)]
+df_disease_cont <- df[which(df$glaucoma == 1), c(3,4,5,6,8,9)]
 #Same type of subsetting by row, except using a value of one, indicating glaucoma diagnosis.
 df_disease_cont_corr <- cor(df_disease_cont)
 kable(df_disease_cont_corr)
@@ -86,13 +86,3 @@ corrplot(df_disease_cont_corr,
 
 
 In the disease state, mean_deviation and RNFL mean maintain the highest correlation coefficient, although the strength of the correlation weakens slightly having a value of only 0.56.
-
-##Repoducibility
-
-
-Hopefully between the comments in the code and the README, my analyses are easy to follow through and reproduce. I'll say that the original authors do a reasonable job describing the dataset and stating which models they use to compare to; however, I could not find the actual code they used for their model. Whether this is my own failing to understand/interpret their work or them not actually making it clear is not apparent to me.
-
-
-
-
-
